--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <script type="module" src="app.js"></script>
   </head>
   <body>
-    <!-- ──────────────── FILTER CONTROLS ──────────────── -->
     <div id="controls">
       <label for="group-filter">Group:</label>
       <select id="group-filter"></select>
@@ -43,5 +42,7 @@
         </div>
       </div>
     </div>
+
+    <div id="disp-chart"></div>
   </body>
 </html>
