add other stuff

--- a/index.html
+++ b/index.html
@@ -70,13 +70,30 @@
             </div>
           </div>
 
-          <div id="head">
-          </div>
+          <div id="head"></div>
         </div>
 
         <div id="disp-chart-container">
           <label>Displacement Over Time</label>
           <div id="disp-chart"></div>
+        </div>
+
+        <h3>Displacement of All Genres for Selected Individual</h3>
+        <div id="genre-displacement">
+          <div id="genre-toggle">
+            <label
+              ><input type="checkbox" value="silence" checked /> Silence</label
+            >
+            <label><input type="checkbox" value="salsa" checked /> Salsa</label>
+            <label
+              ><input type="checkbox" value="meditation" checked />
+              Meditation</label
+            >
+            <label><input type="checkbox" value="edm" checked /> EDM</label>
+          </div>
+          <div id="disp-participant">
+            <label for="disp-participant">Displacement by Genre</label>
+          </div>
         </div>
       </div>
     </div>
